[workspace]
members = [
    "chain-reader",
    "indexer/main",
    "plugin-examples/block",
    "mock",
    "core/chain/substrate",
    "cli"
]
exclude = [
    "code-compiler" # Ignore this python project because it contains Cargo.toml which is only used for populating new index
]

[patch.crates-io]
# Include protection against stack overflow when parsing from this PR: https://github.com/graphql-rust/graphql-parser/commit/45167b53e9533c331298683577ba8df7e43480ac
graphql-parser = {git="https://github.com/graphql-rust/graphql-parser", rev="45167b53e9533c331298683577ba8df7e43480ac"}
